# voice-clone

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup_wslg.sh
docs/: README.md
docs/guide/: environment-setup.md  quick-start.md  recording.md  transcription.md  tts.md  youtube-audio.md
sample_voices/: README.md
src/voice_clone/: __init__.py  cli.py  config.py
src/voice_clone/audio/: __init__.py  devices.py  recorder.py
src/voice_clone/stt/: __init__.py  vosk_stt.py
src/voice_clone/tts/: __init__.py  qwen_tts.py
